pages/reference-smart-account/v1.3.0/transactions/execTransaction.mdx
import { Tabs, Callout } from 'nextra/components'
import ExecutionSuccess from '../events/ExecutionSuccess.mdx'
import ExecutionFailure from '../events/ExecutionFailure.mdx'
import LegacyCallout from '../../../../components/callouts/LegacyCallout.mdx'
import OnlySafeTxCallout from '../../../../components/callouts/OnlySafeTxCallout.mdx'
import ReentrancyCallout from '../../../../components/callouts/ReentrancyCallout.mdx'
import IrreversibilityCallout from '../../../../components/callouts/IrreversibilityCallout.mdx'
import VirtualCallout from '../../../../components/callouts/VirtualCallout.mdx'
import ModuleCallout from '../../../../components/callouts/ModuleCallout.mdx'
import PreApprovedCallout from '../../../../components/callouts/PreApprovedCallout.mdx'


<LegacyCallout />

# `execTransaction` (0x6a761202)



Allows to execute a Safe transaction confirmed by required number of owners and then pays the account that submitted the transaction.
Note: The fees are always transferred, even if the user transaction fails.




Defined in [`GnosisSafe.sol`](https://github.com/safe-global/safe-smart-account/tree/v1.3.0/contracts/GnosisSafe.sol#L111).


## Usage

{/* <!-- vale off --> */}

<Tabs items={['example.sol']}>
  <Tabs.Tab>
    ```solidity
    interface ISafe {
        function execTransaction(
            address to,
            uint256 value,
            bytes calldata data,
            Enum.Operation operation,
            uint256 safeTxGas,
            uint256 baseGas,
            uint256 gasPrice,
            address gasToken,
            address payable refundReceiver,
            bytes memory signatures
        ) public payable virtual returns (bool success)
    }

    contract Example {
        function example() ... {
            (ISafe safe).execTransaction(
                0x...,
                0,
                "0x...",
                0,
                0,
                0,
                0,
                0x...,
                0x...,
                "0x..."
            );
        }
    }
    ```
  </Tabs.Tab>
</Tabs>

{/* <!-- vale on --> */}



## Parameters

### `to`

  - **Type:** `address`

  Destination address of Safe transaction.

  ```solidity focus=2
  (ISafe safe).execTransaction(
    0x...,
    0,
    "0x...",
    0,
    0,
    0,
    0,
    0x...,
    0x...,
    "0x..."
  );
  ```


### `value`

  - **Type:** `uint256`

  Ether value of Safe transaction.

  ```solidity focus=3
  (ISafe safe).execTransaction(
    0x...,
    0,
    "0x...",
    0,
    0,
    0,
    0,
    0x...,
    0x...,
    "0x..."
  );
  ```


### `data`

  - **Type:** `bytes`

  Data payload of Safe transaction.

  ```solidity focus=4
  (ISafe safe).execTransaction(
    0x...,
    0,
    "0x...",
    0,
    0,
    0,
    0,
    0x...,
    0x...,
    "0x..."
  );
  ```


### `operation`

  - **Type:** `enum Enum.Operation`

  Operation type of Safe transaction.

  ```solidity focus=5
  (ISafe safe).execTransaction(
    0x...,
    0,
    "0x...",
    0,
    0,
    0,
    0,
    0x...,
    0x...,
    "0x..."
  );
  ```


### `safeTxGas`

  - **Type:** `uint256`

  Gas that should be used for the Safe transaction.

  ```solidity focus=6
  (ISafe safe).execTransaction(
    0x...,
    0,
    "0x...",
    0,
    0,
    0,
    0,
    0x...,
    0x...,
    "0x..."
  );
  ```


### `baseGas`

  - **Type:** `uint256`

  Gas costs that are independent of the transaction execution(for example base transaction fee, signature check, payment of the refund)

  ```solidity focus=7
  (ISafe safe).execTransaction(
    0x...,
    0,
    "0x...",
    0,
    0,
    0,
    0,
    0x...,
    0x...,
    "0x..."
  );
  ```


### `gasPrice`

  - **Type:** `uint256`

  Gas price that should be used for the payment calculation.

  ```solidity focus=8
  (ISafe safe).execTransaction(
    0x...,
    0,
    "0x...",
    0,
    0,
    0,
    0,
    0x...,
    0x...,
    "0x..."
  );
  ```


### `gasToken`

  - **Type:** `address`

  Token address (or 0 if ETH) that is used for the payment.

  ```solidity focus=9
  (ISafe safe).execTransaction(
    0x...,
    0,
    "0x...",
    0,
    0,
    0,
    0,
    0x...,
    0x...,
    "0x..."
  );
  ```


### `refundReceiver`

  - **Type:** `address payable`

  Address of receiver of gas payment (or 0 if tx.origin).

  ```solidity focus=10
  (ISafe safe).execTransaction(
    0x...,
    0,
    "0x...",
    0,
    0,
    0,
    0,
    0x...,
    0x...,
    "0x..."
  );
  ```


### `signatures`

  - **Type:** `bytes`

  Packed signature data (\{bytes32 r\}\{bytes32 s\}\{uint8 v\})

  ```solidity focus=11
  (ISafe safe).execTransaction(
    0x...,
    0,
    "0x...",
    0,
    0,
    0,
    0,
    0x...,
    0x...,
    "0x..."
  );
  ```




## Events

<ExecutionSuccess />
<ExecutionFailure />

